# unix-course

02_TerminalProject/: Makefile
03_Multifile/: Makefile
03_TerminalProject/: Show.c
04_Text/: randomize.sh
05_Debugging/: Makefile  range.c  test1.gdb  test2.gdb  test2.gt
06_TracingFencing/: Makefile  move.c
07_Environmental/: meson.build  meson_options.txt  rhasher.c  test.sh
08_Regexps/: esub.c  meson.build  test.sh
09_Testing/: buf.c  buf.h  meson.build
09_Testing/tests/: clear_null.c  common.h  grow_trunc.c  init_free.c  pop.c  push_index.c
10_I18n/: binsearch.c  meson.build
10_I18n/po/: ru.po
11_Documenting/: binsearch.c  meson.build
11_Documenting/docs/: mainpage.md  meson.build
11_Documenting/po/: meson.build  ru.po
12_PatchInstall/: Doxyfile  meson.build
12_PatchInstall/docs/: build_docs.sh  meson.build
12_PatchInstall/docs/man/man3/: binsearch.c.3
12_PatchInstall/po/: meson.build
